--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,9 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
+  
+  
+  <script src="https://kit.fontawesome.com/25e2622b95.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
