--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,6 +12,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <script src="https://kit.fontawesome.com/25e2622b95.js" crossorigin="anonymous"></script>
+  <script src="https://js.stripe.com/v3/"></script>
+
   <title>Worktopia</title>
 </head>
 
