Implemented payments through Stripe (#81)
* Setting up stripe and API routes for payment, logic to follow

* Fixing class to className in Nav component

* installing stripe and react-stripe-checkout

* Logic for payment through stripe

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,6 +24,7 @@
       src="https://kit.fontawesome.com/25e2622b95.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://js.stripe.com/v3/"></script>
     <title>Worktopia</title>
   </head>
 
