--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHIvXrmVihVeJfebfju0K5LPquWhNx9oc&libraries=places">
+  <script src="https://maps.googleapis.com/maps/api/js?key=&libraries=places">
   </script>
   <noscript>
     You need to enable JavaScript to run this app.
