--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,26 +9,32 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0/journal/bootstrap.min.css" /> -->
+    <!-- Importing Bootstrap CSS library -->
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
+    <!-- Importing Animate.css Library -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"
     />
+    <!-- Importing JQuery Library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- Importing Bootstrap JS Library -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <!-- Importing Font Awesome -->
     <script
       src="https://kit.fontawesome.com/25e2622b95.js"
       crossorigin="anonymous"
     ></script>
+    <!-- Importing Stripe JS script -->
     <script src="https://js.stripe.com/v3/"></script>
     <title>Worktopia</title>
   </head>
 
   <body>
+    <!-- Importing Google Places API -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHIvXrmVihVeJfebfju0K5LPquWhNx9oc&libraries=places"></script>
     <noscript>
       You need to enable JavaScript to run this app.
