--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,44 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="theme-color" content="#000000" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <!-- Importing Bootstrap CSS library -->
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <!-- Importing Animate.css Library -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"
-    />
-    <!-- Importing JQuery Library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <!-- Importing Bootstrap JS Library -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <!-- Importing Font Awesome -->
-    <script
-      src="https://kit.fontawesome.com/25e2622b95.js"
-      crossorigin="anonymous"
-    ></script>
-    <!-- Importing Stripe JS script -->
-    <script src="https://js.stripe.com/v3/"></script>
-    <title>Worktopia</title>
-  </head>
 
-  <body>
-    <!-- Importing Google Places API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHIvXrmVihVeJfebfju0K5LPquWhNx9oc&libraries=places"></script>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="root"></div>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="theme-color" content="#000000" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+  <!-- Importing Bootstrap CSS library -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <!-- Importing Animate.css Library -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
+  <!-- Importing JQuery Library -->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+  </script>
+  <!-- Importing Bootstrap JS Library -->
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+  </script>
+  <!-- Importing Font Awesome -->
+  <script src="https://kit.fontawesome.com/25e2622b95.js" crossorigin="anonymous"></script>
+  <!-- Importing Stripe JS script -->
+  <script src="https://js.stripe.com/v3/"></script>
+  <title>Worktopia</title>
+</head>
+
+<body>
+  <!-- Importing Google Places API -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHIvXrmVihVeJfebfju0K5LPquWhNx9oc&libraries=places">
+  </script>
+  <noscript>
+    You need to enable JavaScript to run this app.
+  </noscript>
+  <div id="root"></div>
+</body>
+
 </html>
